--- a/Tarea2.ipynb
+++ b/Tarea2.ipynb
@@ -7,12 +7,10 @@
    "source": [
     "#### Maestría en Inteligencia de Negocios y Análisis de Datos\n",
     "#### Segundo Ciclo, Abril 2023\n",
-    "#### Tarea # 1\n",
+    "#### Tarea # 2\n",
     "#### Marvin Chávez 08105031\n",
     "\n",
-    "Utilizando el dataset visto en clase dataHP.csv, desarrollar los procesos de ingeniería de características para proprocesar el dataset. Deberá aplicar la imputación de datos y la codificación de variables categóricas.  \n",
-    "Puede utilizar los criterios que quiera para cada caso. Deberá explicar cada paso realizado y por qué tomó cada decisión en particular.\n",
-    "El proceso debe aplicarse a todas las columnas que lo requieran, tanto numéricas como categóricas."
+    "Tomar codigo del laboratorio anterior y agregar el código visto en clase para tratar Outliers. Automatizarlo para no tener negativos."
    ]
   },
   {
